GNOME Bugzilla – Bug 683265
ginvoke: fundamental type G_TYPE_PARAM not supported
Last modified: 2015-02-07 16:53:43 UTC
Subject says it all. Patch adds supports to convert GParamSpec values back and forth. See also bug #683099 for some problems this causes for marshalling in pygobject.
Created attachment 223294 [details] [review] ginvoke: support conversion of fundamental type GParamSpec values
This is a test case for this bug: http://bugzilla-attachments.gnome.org/attachment.cgi?id=223272 (from pygobject bug 683099). It works well, thanks! @g-i maintainers: OK to commit this? (whoever commits, please add the bug link to the changelog).
Review of attachment 223294 [details] [review]: Looks trivial and seems tested by pygobject.
Comment on attachment 223294 [details] [review] ginvoke: support conversion of fundamental type GParamSpec values Pushed, thanks Mark!
Pushed test case: http://git.gnome.org/browse/pygobject/commit/?id=69fb92c22b3f3d1d5e8c3e14134eee3242fdc5fc
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]