ginvoke: support conversion of fundamental type GParamSpec values

https://bugzilla.gnome.org/show_bug.cgi?id=683265